--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -30,6 +30,7 @@ on init
     write /sys/class/backlight/panel0-backlight/brightness 200
     export LD_LIBRARY_PATH /system/lib64:/system/lib64/hw:/vendor/lib64:/vendor/lib64/hw
     setprop prepdecrypt.setpatch true
+    setprop ro.vendor.build.security_patch 2099-12-31
 
 on boot
     start health-hal-2-1
